tests/call/float.rev
1.4() // error: only functions and structures are callable